--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,6 @@
 mountpoints:
-  /: https://adobe.sharepoint.com/:f:/r/sites/Citisignal-Bruce/Shared%20Documents/starter-content-commerce/drafts/denham
+  /: https://adobe.sharepoint.com/:f:/r/sites/Citisignal-Bruce/Shared%20Documents/starter-content-commerce
 
 folders:
   /products/: /products/default
+  /: starter-content-commerce/drafts/denham
